--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "6.18-2-EXUI-433-rc1",
+  "version": "6.18-2-pass-all-fields",
   "engines": {
     "yarn": "^3.5.0",
     "npm": "^8.10.0"
