--- a/projects/ccd-case-ui-toolkit/package.json
+++ b/projects/ccd-case-ui-toolkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "6.18-2-pass-all-fields",
+  "version": "6.18.2-EXUI-433-pass-all-fields",
   "engines": {
     "yarn": "^3.5.0",
     "npm": "^8.10.0"
