--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "6.18.0-restricted-case-access",
+  "version": "6.18.0-restricted-case-access-v1",
   "engines": {
     "yarn": "^3.5.0",
     "npm": "^8.10.0"
@@ -18,12 +18,12 @@
     "access": "public"
   },
   "scripts": {
+    "clean": "rimraf node_modules",
     "build": "npm run build:library",
     "build:library": "ng build ccd-case-ui-toolkit-lib",
     "build:library:watch": "npm run build:library -- --watch",
     "build:watch": "concurrently --raw \"npm run build:umd:watch\"",
     "ci": "npm run lint && npm run test && npm run build && npm run docs",
-    "clean": "rimraf node_modules",
     "clean:all": "npm run clean:tmp && rimraf node_modules",
     "clean:tmp": "rimraf coverage dist tmp docs",
     "coverage": "nyc report --reporter=json && codecov -f coverage/coverage-final.json",
@@ -40,7 +40,7 @@
     "test": "ng test ccd-case-ui-toolkit-lib  --code-coverage",
     "test:codacy-upload": "echo `cat ./coverage/ccd-case-ui-toolkit/lcov-report/lcov.info | codacy-coverage`",
     "test:coverage": "ng test ccd-case-ui-toolkit-lib --code-coverage",
-    "test:watch": "ng test ccd-case-ui-toolkit-lib --code-coverage --watch=true",
+    "test:watch": "ng test ccd-case-ui-toolkit-lib --watch=true",
     "test:audit": "./bin/run-yarn-audit.sh -f yarn-audit-known-issues",
     "tslint": "tslint",
     "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
@@ -85,7 +85,6 @@
     "ngx-pagination": "5.1.1",
     "npm-registry-fetch": "^4.0.5",
     "pegjs": "^0.10.0",
-    "rpx-xui-translation": "0.2.3-yesno-translations-fix-v2",
     "rx-polling": "1.1.0",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
@@ -139,7 +138,6 @@
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "json-loader": "^0.5.4",
-    "just-clone": "^6.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
