--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "6.18.2-hotfix-EUI-8601-2",
+  "version": "6.18.2-hotfix-EUI-8601-8687-8732",
   "engines": {
     "yarn": "^3.5.0",
     "npm": "^8.10.0"
