--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "6.16.0-query-management-update-mock-data",
+  "version": "6.19.0-case-flags-v2.1-flag-visibility-checkbox",
   "engines": {
     "yarn": "^3.5.0",
     "npm": "^8.10.0"
