--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/jasmine": "~2.8.0",
     "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^14.14.45",
+    "@types/node": "^18.17.0",
     "@types/pegjs": "^0.10.0",
     "@types/underscore": "^1.11.4",
     "@types/webpack": "^4.41.25",
@@ -172,7 +172,7 @@
     "ts-node": "~10.8.1",
     "tslib": "^2.1.0",
     "tslint": "^6.1.3",
-    "typescript": "4.0.8",
+    "typescript": "4.8.2",
     "webpack": "^4.20.2",
     "webpack-angular-externals": "^1.0.2",
     "webpack-cli": "^4.4.0",
@@ -212,7 +212,8 @@
     "dns-packet": "1.3.4",
     "hosted-git-info": "^3.0.8",
     "normalize-url": "^6.0.1",
-    "trim-newlines": "^3.0.1"
+    "trim-newlines": "^3.0.1",
+    "typescript": "4.0.8"
   },
   "nyc": {
     "include": [
@@ -222,5 +223,5 @@
     "sourceMap": false,
     "instrument": false
   },
-  "packageManager": "yarn@3.5.0"
+  "packageManager": "yarn@3.6.1"
 }
