--- a/package.json
+++ b/package.json
@@ -91,11 +91,12 @@
     "rxjs-compat": "^6.6.7",
     "underscore": "^1.9.1",
     "util": "^0.12.4",
-    "yargs-parser": "21.1.1",
+    "yargs": "17.7.2",
+    "yargs-parser": "21.1.2",
     "zone.js": "~0.11.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.2.12",
+    "@angular-devkit/build-angular": "^15.2.9",
     "@angular/cli": "^15.2.9",
     "@angular/compiler-cli": "~15.2.9",
     "@babel/core": "^7.18.10",
@@ -168,12 +169,12 @@
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.3",
     "to-string-loader": "^1.1.5",
-    "ts-loader": "^9.3.1",
+    "ts-loader": "^9.4.4",
     "ts-node": "~10.8.1",
-    "tslib": "^2.1.0",
+    "tslib": "^2.6.1",
     "tslint": "^6.1.3",
     "typescript": "4.8.2",
-    "webpack": "^4.20.2",
+    "webpack": "^5.88.2",
     "webpack-angular-externals": "^1.0.2",
     "webpack-cli": "^4.4.0",
     "webpack-dev-middleware": "^4.0.2",
@@ -198,7 +199,7 @@
     "npm-registry-fetch": "^4.0.5",
     "serialize-javascript": "^3.1.0",
     "tree-kill": "^1.2.2",
-    "yargs-parser": "^18.1.2",
+    "yargs-parser": "^21.1.1",
     "ssri": "^6.0.2",
     "glob-parent": "^5.1.2",
     "url-parse": "^1.5.0",
