ignore angular cache

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,6 @@ projects/ccd-case-ui-toolkit/.yarn/*
 !projects/ccd-case-ui-toolkit/.yarn/sdks
 !projects/ccd-case-ui-toolkit/.yarn/versions
 cptk.sh
+
+
+.angular/cache
