--- a/projects/ccd-case-ui-toolkit/package.json
+++ b/projects/ccd-case-ui-toolkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "6.19.1-exui-659-rc3",
+  "version": "6.19.3-mv-upgrade",
   "engines": {
     "yarn": "^3.5.0",
     "npm": "^8.10.0"
