--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "7.0.0-RetryCaseRetrievals.1",
+  "version": "7.0.0-NodeAndNgUpgrades.1",
   "engines": {
     "yarn": "^3.5.0",
     "npm": "^8.10.0"
