--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "6.19.5-hotfix-EUI-8679-8770",
+  "version": "6.19.4-sscs-joh-fixes",
   "engines": {
     "yarn": "^3.5.0",
     "npm": "^8.10.0"
