--- a/projects/ccd-case-ui-toolkit/package.json
+++ b/projects/ccd-case-ui-toolkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "6.19.4-sscs-joh-fixes",
+  "version": "6.19.5-case-flags-v2-1-internal-external-grouping",
   "engines": {
     "yarn": "^3.5.0",
     "npm": "^8.10.0"
