--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "6.19.7",
+  "version": "6.19.7-case-flags-v2-1-remove-duplicate-party-locations",
   "engines": {
     "yarn": "^3.5.0",
     "npm": "^8.10.0"
