--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "6.19.5",
+  "version": "6.19.5-yes-no-bug-fix-v2",
   "engines": {
     "yarn": "^3.5.0",
     "npm": "^8.10.0"
@@ -85,7 +85,7 @@
     "ngx-pagination": "5.1.1",
     "npm-registry-fetch": "^4.0.5",
     "pegjs": "^0.10.0",
-    "rpx-xui-translation": "0.2.3-yesno-translations-fix-v2",
+    "rpx-xui-translation": "0.2.3-yes-no-bug-fix-v2",
     "rx-polling": "1.1.0",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
