--- a/package.json
+++ b/package.json
@@ -52,20 +52,20 @@
     "@angular-material-components/moment-adapter": "15.0.0",
     "@angular/animations": "~15.2.9",
     "@angular/cdk": "^15.2.9",
-    "@angular/common": "~15.2.9",
-    "@angular/compiler": "~15.2.9",
-    "@angular/core": "~15.2.9",
-    "@angular/forms": "~15.2.9",
+    "@angular/common": "^15.2.9",
+    "@angular/compiler": "^15.2.9",
+    "@angular/core": "^15.2.9",
+    "@angular/forms": "^15.2.9",
     "@angular/localize": "15.2.9",
-    "@angular/material": "^15.2.9",
-    "@angular/platform-browser": "~15.2.9",
-    "@angular/platform-browser-dynamic": "~15.2.9",
-    "@angular/router": "~15.2.9",
-    "@angular/upgrade": "~15.2.9",
+    "@angular/material": "15.2.9",
+    "@angular/platform-browser": "^15.2.9",
+    "@angular/platform-browser-dynamic": "^15.2.9",
+    "@angular/router": "^15.2.9",
+    "@angular/upgrade": "^15.2.9",
     "@edium/fsm": "^2.1.2",
     "@hmcts/ccpay-web-component": "6.0.0-beta01",
-    "@hmcts/frontend": "^0.0.50-alpha",
-    "@hmcts/media-viewer": "2.10.0",
+    "@hmcts/frontend": "0.0.50-alpha",
+    "@hmcts/media-viewer": "2.10.1-RC.1",
     "@ngrx/effects": "^11.1.1",
     "@ngrx/store": "^15.2.1",
     "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
@@ -98,7 +98,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.9",
     "@angular/cli": "^15.2.9",
-    "@angular/compiler-cli": "~15.2.9",
+    "@angular/compiler-cli": "^15.2.9",
     "@babel/core": "^7.18.10",
     "@compodoc/compodoc": "1.1.12",
     "@storybook/addon-actions": "^6.5.10",
@@ -224,5 +224,5 @@
     "sourceMap": false,
     "instrument": false
   },
-  "packageManager": "yarn@3.6.1"
+  "packageManager": "yarn@3.6.4"
 }
