--- a/package.json
+++ b/package.json
@@ -183,7 +183,36 @@
     "yarn": "^1.22.15"
   },
   "resolutions": {
+    "braces": "^2.3.1",
+    "dot-prop": "^5.1.1",
+    "elliptic": "6.5.4",
+    "graceful-fs": "^4.2.3",
+    "handlebars": "^4.7.7",
+    "https-proxy-agent": "^2.2.3",
+    "lodash": "^4.17.21",
+    "marked": "^0.7.0",
+    "minimatch": "^3.0.2",
+    "minimist": "^1.2.3",
+    "node-fetch": "^2.6.7",
+    "node-forge": "^0.10.0",
+    "npm-registry-fetch": "^4.0.5",
+    "serialize-javascript": "^3.1.0",
+    "tree-kill": "^1.2.2",
     "yargs-parser": "^21.1.1",
+    "ssri": "^6.0.2",
+    "glob-parent": "^5.1.2",
+    "url-parse": "^1.5.0",
+    "xmlhttprequest-ssl": "1.6.3",
+    "y18n": "^4.0.1",
+    "prismjs": "1.24.1",
+    "websocket-extensions": "0.1.4",
+    "ini": "^2.0.0",
+    "browserslist": "^4.16.6",
+    "mem": "^8.1.1",
+    "dns-packet": "1.3.4",
+    "hosted-git-info": "^3.0.8",
+    "normalize-url": "^6.0.1",
+    "trim-newlines": "^3.0.1",
     "typescript": "4.8.2"
   },
   "nyc": {
