--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "6.19.5",
+  "version": "6.19.8-rc1",
   "engines": {
     "yarn": "^3.5.0",
     "npm": "^8.10.0"
@@ -63,7 +63,7 @@
     "@angular/router": "~11.2.14",
     "@angular/upgrade": "~11.2.14",
     "@edium/fsm": "^2.1.2",
-    "@hmcts/ccpay-web-component": "5.2.8",
+    "@hmcts/ccpay-web-component": "5.2.12",
     "@hmcts/frontend": "^0.0.50-alpha",
     "@hmcts/media-viewer": "2.9.5",
     "@ngrx/effects": "^7.4.0",
