fix: EXUI-787 - Fixed lint srcipt, lint issues, code issue. Code tidy

--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "docs": "compodoc -p tsconfig.json -d docs --disableCoverage --disablePrivate --disableProtected --disableInternal --disableLifeCycleHooks",
     "explorer": "source-map-explorer ./dist/index.umd.js",
     "gh-pages": "rimraf docs && npm run docs && gh-pages -d docs",
-    "lint": "echo \\'ng lint\\' skipped as it is broken!",
+    "lint": "ng lint ccd-case-ui-toolkit",
     "ngcompile": "node_modules/.bin/ngc -p tsconfig-aot.json",
     "postversion": "git push && git push --tags",
     "prebuild": "rimraf dist tmp",
     "prebuild:watch": "rimraf dist tmp",
     "preversion": "npm run ci",
     "build:ng:test": "ng build",
-    "test": "echo \\'yarn test\\' skipped as it is broken!",
+    "test": "ng test ccd-case-ui-toolkit-lib  --code-coverage",
     "test:codacy-upload": "echo `cat ./coverage/ccd-case-ui-toolkit/lcov-report/lcov.info | codacy-coverage`",
-    "test:coverage": "echo \\'yarn test:coverage\\' skipped as it is broken!",
+    "test:coverage": "ng test ccd-case-ui-toolkit-lib --code-coverage",
     "test:watch": "ng test ccd-case-ui-toolkit-lib --code-coverage --watch=true",
     "test:audit": "./bin/run-yarn-audit.sh -f yarn-audit-known-issues",
     "tslint": "tslint",
@@ -96,6 +96,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.9",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "^15.2.9",
     "@angular/compiler-cli": "^15.2.9",
     "@babel/core": "^7.23.0",
@@ -116,6 +121,8 @@
     "@types/underscore": "^1.11.4",
     "@types/webpack": "^4.41.25",
     "@types/webpack-env": "^1.16.0",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
     "angular2-template-loader": "^0.6.2",
     "babel-loader": "^8.2.5",
     "class-transformer": "^0.3.2",
@@ -126,6 +133,7 @@
     "core-js": "^2.4.1",
     "css-loader": "^6.7.1",
     "del": "^3.0.0",
+    "eslint": "^8.33.0",
     "expect": "^23.0.0",
     "express": "^4.16.4",
     "font-awesome": "^4.6.1",
