--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,7 @@
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
-      "prefix": "app",
+      "prefix": "ccd-case",
       "schematics": {},
       "architect": {
         "build": {
@@ -83,14 +83,11 @@
           }
         },
         "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
+            "eslintConfig": ".eslintrc.cjs",
+            "lintFilePatterns": [
+              "src/**/*.ts"
             ]
           }
         }
@@ -112,12 +109,12 @@
             }
           }
         },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
+        "lint":  {
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": "e2e/tsconfig.e2e.json",
-            "exclude": [
-              "**/node_modules/**"
+            "eslintConfig": ".eslintrc.cjs",
+            "lintFilePatterns": [
+              "src/**/*.ts"
             ]
           }
         }
