--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -7,6 +7,7 @@
     "allowSyntheticDefaultImports": true
   },
   "exclude": [
+    "../projects/ccd-case-ui-toolkit/src/test.ts",
     "../projects/**/*.spec.ts"
   ],
   "include": [
