--- a/package.json
+++ b/package.json
@@ -151,8 +151,11 @@
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-parallel": "^0.3.1",
+    "karma-sonarqube-unit-reporter": "^0.0.23",
     "karma-spec-reporter": "0.0.34",
     "local-storage": "^2.0.0",
     "merge-stream": "^1.0.0",
