--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "importHelpers": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "typeRoots": [
       "node_modules/@types"
     ],
