--- a/projects/ccd-case-ui-toolkit/package.json
+++ b/projects/ccd-case-ui-toolkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "6.19.11-rc2",
+  "version": "6.19.9-case-flags-v2-1-consolidation-final-fixes-3",
   "engines": {
     "yarn": "^3.5.0",
     "npm": "^8.10.0"
