--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "7.0.0-rc8",
+  "version": "7.0.0",
   "engines": {
     "node": ">=18.17.0"
   },
