--- a/projects/ccd-case-ui-toolkit/package.json
+++ b/projects/ccd-case-ui-toolkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "6.19.13-load-hearings-tab-v4",
+  "version": "6.19.15-welsh-yes-no-fixes",
   "engines": {
     "yarn": "^3.5.0",
     "npm": "^8.10.0"
