Update translation package (#1578)
* Update translation package

* Fix undefined case field label issue (#1582)

* Fix fomat issue

* bump version

* install

* bump version

* Fix unit test

* bump version

* Feature/EUI 8901 fix hearing load with translation (#1611)

* Bump version

* Update actions to V3

* Add yarnrc to projects dir

* Move publish conditional up to job instead of steps

* Adjust github workflow

* Get branch in line with 197

* EUI-8025 Linked cases continue button not showing error message

* EUI-8025 Linked cases continue button not showing error message

* Workflow change...

* Workfloaw and workspace tweak

* Revert "Workfloaw and workspace tweak"

This reverts commit 209363f1db30cf78d7163db7d6bb125c1303034b.

* Publish fix

* EUI-8025 Linked cases continue button not showing error message

* bug/EUI-8026 reasons sort

* CR comments fix

* Verison bump to 6.14.4-eui-4157-b

* EXUI-163: More linting

* EXUI-163: Fix test

* Merge from release

* EUI-8303 QM Orchestrator

* EUI-8303 QM Orchestrator

* Lint fixes

* EUI-8303 QM Orchestrator

* EUI-8303 QM Orchestrator

* EUI-8303 QM Orchestrator

* EUI-8303 QM Orchestrator

* EUI-8303 QM Orchestrator

* EUI-8303 QM Orchestrator

* EUI-8303 QM Orchestrator

* Tech/marge master release 4 (#1448)

* story/EUI-5464 fix errors on next (#1426)

* story/EUI-5464 fix errors on next

* code review comments fix

* tests fix

* CR fix imports order update

* import fix

* version update

* Revert "story/EUI-5464 fix errors on next (#1426)" (#1431)

This reverts commit a32e3caab48a37c42dbb94f1d68b3cc46730c23a.

* Feature/release4 wa4 (#1423)

* Update index.ts

Change to judiciary

* Update package.json

* Update index.spec.ts

* Add updateAttributes method for specific and challenge access request

* make updateAttributes method static

* added accessReason on attributes

* bump version

* 

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "6.19.15-case-flags-v2-manage-case-flags-flag-update-comments-fix-2",
+  "version": "6.19.15-welsh-yes-no-fixes-v1",
   "engines": {
     "yarn": "^3.5.0",
     "npm": "^8.10.0"
@@ -85,7 +85,7 @@
     "ngx-pagination": "5.1.1",
     "npm-registry-fetch": "^4.0.5",
     "pegjs": "^0.10.0",
-    "rpx-xui-translation": "0.2.3-yesno-translations-fix-v2",
+    "rpx-xui-translation": "0.2.3-yes-no-bug-fix-v3",
     "rx-polling": "1.1.0",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
