--- a/projects/ccd-case-ui-toolkit/package.json
+++ b/projects/ccd-case-ui-toolkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "7.0.3-case-flags-v2-1-release",
+  "version": "7.0.2-welsh-testing-fix-v1",
   "engines": {
     "node": ">=18.17.0"
   },
