--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@hmcts/media-viewer": "2.10.1-RC.1",
     "@ngrx/effects": "^11.1.1",
     "@ngrx/store": "^15.2.1",
-    "@nicky-lenaers/ngx-scroll-to": "^14.0.0",
+    "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
     "braces": "^2.3.1",
     "enhanced-resolve": "3.3.0",
     "file-saver": "^2.0.2",
@@ -80,8 +80,8 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
     "ngx-chips": "2.1.0",
-    "ngx-md": "^12.0.0",
-    "ngx-pagination": "^6.0.3",
+    "ngx-md": "8.1.6",
+    "ngx-pagination": "5.1.1",
     "npm-registry-fetch": "^4.0.5",
     "pegjs": "^0.10.0",
     "rpx-xui-translation": "1.0.2",
@@ -162,7 +162,7 @@
     "mocha": "^8.1.1",
     "multidep": "2.0.2",
     "ng-mocks": "^14.1.1",
-    "ng-packagr": "^17.1.0",
+    "ng-packagr": "^16.2.3",
     "ng2-mock-component": "^0.1.1",
     "ngx-device-detector": "^1.3.0",
     "nyc": "^13.0.1",
