--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@edium/fsm": "^2.1.2",
     "@hmcts/ccpay-web-component": "6.0.2",
     "@hmcts/frontend": "0.0.50-alpha",
-    "@hmcts/media-viewer": "2.10.1-RC.1",
+    "@hmcts/media-viewer": "3.0.1",
     "@ngrx/effects": "^11.1.1",
     "@ngrx/store": "^15.2.1",
     "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
