--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.projectVersion=0.0.1
 
 sonar.sources=projects/ccd-case-ui-toolkit/src
 sonar.test.inclusions=projects/ccd-case-ui-toolkit/src/**/*.spec.ts
-sonar.exclusions=projects/ccd-case-ui-toolkit/src/*.spec.ts, projects/ccd-case-ui-toolkit/src/**/*.module.ts, projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/datetime-picker/datetime-picker-component.spec.ts, projects/ccd-case-ui-toolkit/src/lib/shared/test/mock-rpx-translate.pipe.ts, projects/ccd-case-ui-toolkit/src/test.ts, projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/write-case-flag-field.component.ts, projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/datetime-picker/datetime-picker-component.ts, projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/complex/read-complex-field.component.ts
+sonar.exclusions=projects/ccd-case-ui-toolkit/src/*.spec.ts, projects/ccd-case-ui-toolkit/src/**/*.module.ts, projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/datetime-picker/datetime-picker-component.spec.ts, projects/ccd-case-ui-toolkit/src/lib/shared/test/mock-rpx-translate.pipe.ts, projects/ccd-case-ui-toolkit/src/test.ts, projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/write-case-flag-field.component.ts, projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/datetime-picker/datetime-picker-component.ts, projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/complex/read-complex-field.component.ts, projects/ccd-case-ui-toolkit/src/lib/shared/commons/address-validation-constants.ts
 
 sonar.javascript.lcov.reportPaths=/github/workspace/coverage/ccd-case-ui-toolkit/lcov-report/lcov.info
 sonar.host.url=
