Bug/e UI 1067 postcode validation (#1668)
* Add full fix

Only additional tests possibly remaining

* Change version

* Fix write address field component tests

* Fix minor import issues

* Update write-address-field.component.ts

Update validation to reduce complexity

* Add postcode validator and add sonar exclusion

* Add space handling

* Update address-validation-constants.ts

---------

Co-authored-by: RiteshHMCTS <74713687+RiteshHMCTS@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "7.0.3-exui-1123",
+  "version": "7.0.14",
   "engines": {
     "node": ">=18.17.0"
   },
