media view version update

--- a/projects/ccd-case-ui-toolkit/package.json
+++ b/projects/ccd-case-ui-toolkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "7.0.21-media-viewer-update",
+  "version": "7.0.21-media-viewer-update-01",
   "engines": {
     "node": ">=18.17.0"
   },
