--- a/package.json
+++ b/package.json
@@ -49,18 +49,18 @@
   "dependencies": {
     "@angular-material-components/datetime-picker": "16.0.1",
     "@angular-material-components/moment-adapter": "16.0.1",
-    "@angular/animations": "~16.2.12",
-    "@angular/cdk": "16.2.14",
-    "@angular/common": "16.2.12",
-    "@angular/compiler": "16.2.12",
-    "@angular/core": "16.2.12",
-    "@angular/forms": "16.2.12",
-    "@angular/localize": "16.2.12",
-    "@angular/material": "16.2.14",
-    "@angular/platform-browser": "16.2.12",
-    "@angular/platform-browser-dynamic": "16.2.12",
-    "@angular/router": "16.2.12",
-    "@angular/upgrade": "16.2.12",
+    "@angular/animations": "~17.3.5",
+    "@angular/cdk": "17.3.5",
+    "@angular/common": "17.3.5",
+    "@angular/compiler": "17.3.5",
+    "@angular/core": "17.3.5",
+    "@angular/forms": "17.3.5",
+    "@angular/localize": "17.3.5",
+    "@angular/material": "^16.2.0",
+    "@angular/platform-browser": "17.3.5",
+    "@angular/platform-browser-dynamic": "17.3.5",
+    "@angular/router": "17.3.5",
+    "@angular/upgrade": "17.3.5",
     "@edium/fsm": "^2.1.2",
     "@hmcts/ccpay-web-component": "6.1.0",
     "@hmcts/frontend": "0.0.50-alpha",
@@ -98,14 +98,14 @@
     "zone.js": "^0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.2.14",
-    "@angular-eslint/builder": "16.3.1",
-    "@angular-eslint/eslint-plugin": "16.3.1",
-    "@angular-eslint/eslint-plugin-template": "16.3.1",
-    "@angular-eslint/schematics": "16.3.1",
-    "@angular-eslint/template-parser": "16.3.1",
-    "@angular/cli": "16.2.14",
-    "@angular/compiler-cli": "16.2.12",
+    "@angular-devkit/build-angular": "17.3.5",
+    "@angular-eslint/builder": "17.3.0",
+    "@angular-eslint/eslint-plugin": "17.3.0",
+    "@angular-eslint/eslint-plugin-template": "17.3.0",
+    "@angular-eslint/schematics": "17.3.0",
+    "@angular-eslint/template-parser": "17.3.0",
+    "@angular/cli": "17.3.5",
+    "@angular/compiler-cli": "17.3.5",
     "@babel/core": "^7.23.0",
     "@compodoc/compodoc": "1.1.12",
     "@storybook/addon-actions": "^6.5.10",
@@ -124,8 +124,8 @@
     "@types/underscore": "^1.11.4",
     "@types/webpack": "^4.41.25",
     "@types/webpack-env": "^1.16.0",
-    "@typescript-eslint/eslint-plugin": "5.48.2",
-    "@typescript-eslint/parser": "5.48.2",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "angular2-template-loader": "^0.6.2",
     "babel-loader": "^8.2.5",
     "class-transformer": "^0.3.2",
@@ -136,7 +136,7 @@
     "core-js": "^2.4.1",
     "css-loader": "^6.7.1",
     "del": "^3.0.0",
-    "eslint": "^8.33.0",
+    "eslint": "^8.57.0",
     "expect": "^23.0.0",
     "express": "^4.16.4",
     "font-awesome": "^4.6.1",
@@ -167,7 +167,7 @@
     "ng-mocks": "^14.12.2",
     "ng-packagr": "^17.3.0",
     "ng2-mock-component": "^0.1.1",
-    "ngx-device-detector": "^1.3.0",
+    "ngx-device-detector": "^7.0.0",
     "nyc": "^13.0.1",
     "raw-loader": "^0.5.1",
     "reflect-metadata": "^0.1.12",
@@ -186,7 +186,7 @@
     "ts-node": "^10.9.2",
     "tslib": "^2.6.1",
     "tslint": "^6.1.3",
-    "typescript": "~4.9.5",
+    "typescript": "~5.4.5",
     "webpack": "^5.88.2",
     "webpack-angular-externals": "^1.0.2",
     "webpack-cli": "^4.4.0",
