--- a/package.json
+++ b/package.json
@@ -105,7 +105,8 @@
     "@angular-eslint/schematics": "16.3.1",
     "@angular-eslint/template-parser": "16.3.1",
     "@angular/cli": "17.3.5",
-    "@angular/compiler-cli": "17.3.5",
+    "@angular/cli": "16.2.14",
+    "@angular/compiler-cli": "16.2.12",
     "@babel/core": "^7.23.0",
     "@compodoc/compodoc": "1.1.12",
     "@storybook/addon-actions": "^6.5.10",
