--- a/projects/ccd-case-ui-toolkit/package.json
+++ b/projects/ccd-case-ui-toolkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "7.0.31",
+  "version": "7.0.31-add-present-button-to-case--viewer-file",
   "engines": {
     "node": ">=18.17.0"
   },
