Update package.json and node update 18.19.0

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hmcts/ccd-case-ui-toolkit",
   "version": "7.0.31-angular-upgrade",
   "engines": {
-    "node": ">=18.17.0"
+    "node": ">=18.19.0"
   },
   "description": "Case UI Toolkit",
   "main": "./dist/index.umd.js",
@@ -98,14 +98,14 @@
     "zone.js": "^0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.3.5",
-    "@angular-eslint/builder": "16.3.1",
-    "@angular-eslint/eslint-plugin": "16.3.1",
-    "@angular-eslint/eslint-plugin-template": "16.3.1",
-    "@angular-eslint/schematics": "16.3.1",
-    "@angular-eslint/template-parser": "16.3.1",
-    "@angular/cli": "17.3.5",
-    "@angular/compiler-cli": "17.3.5",
+    "@angular-devkit/build-angular": "^17.3.5",
+    "@angular-eslint/builder": "17.3.0",
+    "@angular-eslint/eslint-plugin": "17.3.0",
+    "@angular-eslint/eslint-plugin-template": "17.3.0",
+    "@angular-eslint/schematics": "17.3.0",
+    "@angular-eslint/template-parser": "17.3.0",
+    "@angular/cli": "^17.3.5",
+    "@angular/compiler-cli": "^17.3.5",
     "@babel/core": "^7.23.0",
     "@compodoc/compodoc": "1.1.12",
     "@storybook/addon-actions": "^6.5.10",
@@ -119,7 +119,7 @@
     "@storybook/testing-library": "^0.2.0",
     "@types/jasmine": "~2.8.0",
     "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^18.17.0",
+    "@types/node": "^18.19.0",
     "@types/pegjs": "^0.10.0",
     "@types/underscore": "^1.11.4",
     "@types/webpack": "^4.41.25",
@@ -205,7 +205,7 @@
     "https-proxy-agent": "^2.2.3",
     "lodash": "^4.17.21",
     "marked": "^0.7.0",
-    "minimatch": "^3.0.2",
+    "minimatch": "^9.0.4",
     "minimist": "^1.2.3",
     "node-fetch": "^2.6.7",
     "node-forge": "^0.10.0",
