code tidy; remove ngx-md library

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@angular-material-components/moment-adapter": "16.0.1",
     "@angular/animations": "~17.3.5",
     "@angular/cdk": "17.3.5",
-    "@angular/common": "17.3.5",
+    "@angular/common": "^17.3.5",
     "@angular/compiler": "17.3.5",
     "@angular/core": "17.3.5",
     "@angular/forms": "17.3.5",
@@ -81,7 +81,6 @@
     "moment-timezone": "^0.5.31",
     "ngx-chips": "^3.0.0",
     "ngx-markdown": "^17.2.0",
-    "ngx-md": "^14.0.9",
     "ngx-pagination": "6.0.3",
     "npm-registry-fetch": "^4.0.5",
     "pegjs": "^0.10.0",
@@ -92,7 +91,7 @@
     "rxjs": "^7.8.1",
     "rxjs-compat": "^6.6.7",
     "underscore": "^1.9.1",
-    "util": "^0.12.4",
+    "util": "^0.12.5",
     "yargs": "17.7.2",
     "yargs-parser": "^21.1.1",
     "zone.js": "^0.14.4"
