--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "7.0.58",
+  "version": "7.0.58-exui-2220-rc1",
   "engines": {
     "node": ">=18.19.0"
   },
