re-install libraries removed

--- a/package.json
+++ b/package.json
@@ -60,10 +60,12 @@
     "@angular/router": "18.2.13",
     "@angular/upgrade": "18.2.13",
     "@edium/fsm": "^2.1.2",
+    "@hmcts/ccpay-web-component": "6.2.1",
     "@hmcts/frontend": "0.0.50-alpha",
     "@hmcts/media-viewer": "4.0.9",
     "@ngrx/effects": "17.2.0",
     "@ngrx/store": "^17.2.0",
+    "@nicky-lenaers/ngx-scroll-to": "^14.0.0",
     "braces": "^2.3.1",
     "enhanced-resolve": "3.3.0",
     "file-saver": "^2.0.2",
@@ -83,6 +85,7 @@
     "pegjs": "^0.10.0",
     "prism": "^4.1.2",
     "prismjs": "^1.29.0",
+    "rpx-xui-translation": "1.0.2",
     "rx-polling-hmcts": "1.1.1",
     "rxjs": "^7.8.1",
     "rxjs-compat": "^6.6.7",
@@ -99,6 +102,8 @@
     "@angular-eslint/eslint-plugin-template": "17.3.0",
     "@angular-eslint/schematics": "18.0.0",
     "@angular-eslint/template-parser": "17.3.0",
+    "@angular-material-components/datetime-picker": "16.0.1",
+    "@angular-material-components/moment-adapter": "16.0.1",
     "@angular/cli": "^18.2.12",
     "@angular/compiler-cli": "^18.2.13",
     "@babel/core": "^7.23.0",
