--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "7.1.55",
+  "version": "7.1.57-civil-multiple-client",
   "engines": {
     "node": ">=18.19.0"
   },
