--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "7.1.56",
+  "version": "7.1.56-exui-2960-remove-caseinfo",
   "engines": {
     "node": ">=18.19.0"
   },
@@ -151,15 +151,15 @@
     "jasmine-spec-reporter": "~7.0.0",
     "json-loader": "^0.5.4",
     "just-clone": "^6.2.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma": "~6.4.4",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "karma-parallel": "^0.3.1",
     "karma-sonarqube-unit-reporter": "^0.0.23",
-    "karma-spec-reporter": "0.0.34",
+    "karma-spec-reporter": "0.0.36",
     "local-storage": "^2.0.0",
     "merge-stream": "^1.0.0",
     "mocha": "^8.1.1",
