Initial attempt to fix EXUI-2801

--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "access": "public"
   },
   "scripts": {
-    "build": "npm run build:library",
+    "build": "yarn build:library",
     "build:library": "ng build ccd-case-ui-toolkit-lib",
-    "build:library:watch": "npm run build:library -- --watch",
-    "build:watch": "concurrently --raw \"npm run build:umd:watch\"",
-    "ci": "npm run lint && npm run test && npm run build && npm run docs",
+    "build:library:watch": "yarn build:library -- --watch",
+    "build:watch": "concurrently --raw \"yarn build:umd:watch\"",
+    "ci": "yarn lint && yarn test && yarn build && yarn docs",
     "clean": "rimraf node_modules",
-    "clean:all": "npm run clean:tmp && rimraf node_modules",
+    "clean:all": "yarn clean:tmp && rimraf node_modules",
     "clean:tmp": "rimraf coverage dist tmp docs",
     "coverage": "nyc report --reporter=json && codecov -f coverage/coverage-final.json",
     "docs": "compodoc -p tsconfig.json -d docs --disableCoverage --disablePrivate --disableProtected --disableInternal --disableLifeCycleHooks",
@@ -34,7 +34,7 @@
     "postversion": "git push && git push --tags",
     "prebuild": "rimraf dist tmp",
     "prebuild:watch": "rimraf dist tmp",
-    "preversion": "npm run ci",
+    "preversion": "yarn ci",
     "build:ng:test": "ng build",
     "test": "ng test ccd-case-ui-toolkit-lib --code-coverage",
     "test:codacy-upload": "echo `cat ./coverage/ccd-case-ui-toolkit/lcov-report/lcov.info | codacy-coverage`",
