--- a/package.json
+++ b/package.json
@@ -46,26 +46,27 @@
     "build:storybook": "yarn docs:json && build-storybook"
   },
   "dependencies": {
-    "@angular-material-components/datetime-picker": "16.0.1",
-    "@angular-material-components/moment-adapter": "16.0.1",
-    "@angular/animations": "~18.2.13",
-    "@angular/cdk": "17.3.5",
-    "@angular/common": "^18.2.13",
-    "@angular/compiler": "18.2.13",
-    "@angular/core": "18.2.13",
-    "@angular/forms": "18.2.13",
-    "@angular/localize": "18.2.13",
-    "@angular/material": "^16.2.0",
-    "@angular/platform-browser": "18.2.13",
-    "@angular/platform-browser-dynamic": "18.2.13",
-    "@angular/router": "18.2.13",
-    "@angular/upgrade": "18.2.13",
+    "@angular/animations": "~18.2.14",
+    "@angular/cdk": "18.2.14",
+    "@angular/common": "^18.2.14",
+    "@angular/compiler": "18.2.14",
+    "@angular/core": "18.2.14",
+    "@angular/forms": "18.2.14",
+    "@angular/localize": "18.2.14",
+    "@angular/material": "^18.2.14",
+    "@angular/material-moment-adapter": "18.2.14",
+    "@angular/platform-browser": "18.2.14",
+    "@angular/platform-browser-dynamic": "18.2.14",
+    "@angular/router": "18.2.14",
+    "@angular/upgrade": "18.2.14",
     "@edium/fsm": "^2.1.2",
     "@hmcts/ccpay-web-component": "6.2.18",
     "@hmcts/frontend": "0.0.50-alpha",
     "@hmcts/media-viewer": "4.1.6",
     "@ngrx/effects": "17.2.0",
     "@ngrx/store": "^17.2.0",
+    "@ngxmc/datetime-picker": "^18.2.2",
+    "@ngxmc/moment-adapter": "^18.0.0",
     "@nicky-lenaers/ngx-scroll-to": "^14.0.0",
     "braces": "^2.3.1",
     "enhanced-resolve": "3.3.0",
@@ -103,7 +104,7 @@
     "@angular-eslint/schematics": "18.4.3",
     "@angular-eslint/template-parser": "18.4.3",
     "@angular/cli": "^18.2.17",
-    "@angular/compiler-cli": "^18.2.13",
+    "@angular/compiler-cli": "^18.2.14",
     "@babel/core": "^7.23.0",
     "@compodoc/compodoc": "1.1.12",
     "@storybook/addon-actions": "^6.5.10",
